/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'org.springframework.boot' version '2.4.1'
}

apply plugin: 'java'
apply plugin: 'io.spring.dependency-management'

repositories {
    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
    maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
    maven { url "https://repo.spring.io/plugins-release" }
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.data:spring-data-commons'
    implementation 'org.logback-extensions:logback-ext-loggly:0.1.5'
    implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:3.0.2'
    implementation 'ma.glasnost.orika:orika-core:1.5.4'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'org.apache.commons:commons-pool2:2.9.0'
    implementation 'mysql:mysql-connector-java:8.0.20'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'com.auth0:java-jwt:3.12.0'
    implementation 'org.reflections:reflections:0.9.12'
    implementation 'org.jetbrains:annotations:20.1.0'
    implementation 'com.google.guava:guava:30.1-jre'
    implementation('com.qcloud:cos_api:5.5.1'){
        exclude module:'slf4j-log4j12'
    }

    testImplementation 'com.jayway.jsonpath:json-path:2.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'

    compileOnly 'org.projectlombok:lombok:1.18.16'
    annotationProcessor 'org.projectlombok:lombok:1.18.16'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
}

def activeProfile = System.getProperty("profile") ?: "dev"
processResources {
    filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [profileName: activeProfile]
}

def projectName = 'around'
group = 'cn.haigle'
version = '2.0.1'
description = 'around'
java.sourceCompatibility = JavaVersion.VERSION_11
java.targetCompatibility = JavaVersion.VERSION_11

archivesBaseName = projectName + '-' + activeProfile


publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
